--- a/css/responsive.css
+++ b/css/responsive.css
@@ -78,11 +78,21 @@
     }
 }
 
-@media only screen and (min-width: 576px) and (max-width: 767px) {}
+@media only screen and (min-width: 576px) and (max-width: 767px) {
+    .banner,
+    .features-section {
+        text-align: center;
+    }
+}
 
 @media (max-width: 991px) {}
 
-@media only screen and (max-width: 991px) and (min-width: 768px) {}
+@media only screen and (max-width: 991px) and (min-width: 768px) {
+    .banner,
+    .features-section {
+        text-align: center;
+    }
+}
 
 @media only screen and (min-width: 576px) {}
 
